# ILAMB-Data

./: .gitignore  README.md  compare_datasets.py  pyproject.toml  trial.cfg
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: new_dataset.md
.github/workflows/: convert.yaml
Ameriflux/Diurnal/: AMFtoNetCDF4.py  amf.txt
CERES/: convert.py
CLASS/: CLASS_to_ILAMB.py
DaviesBarnard/: convert.py
ESACCI/: convert.py  read-biomass-ESACCI.py
FLUXCOM/: convert.py
Fluxnet2015/: convert.py
GCP/: GCPtoNetCDF4.py
GFED5/: convert.py
GFW/: convert.py  debug_convert.ipynb
GIMMS_LAI4g/: convert.py
GPCC/: convert.py
HIPPO_ATom/: HIPTOM_Flux_estimate.csv  convert.py
HWSD2/: convert.py
ISRIC/: convert.py
Koppen/: convert.py
Kumar/: rewrite.py
Mishra/: convert.py
NCSCD/: convert.py
Nate/: convert.py
SRDB/: convert.py  soil_resp_mean_quantile_regress_forest.tif.sha256  soil_resp_std_dev_quantile_regress_forest.tif.sha256
USA/: encode.py
WECANN/: convert.py
Wang2021/: convert.py
Wang2024/: convert.py
active_layer_thickness/CALM/: convert.py
active_layer_thickness/ESACCI/: convert.py
biomass/ESACCI/: convert.py
biomass/GEOCARBON/: convert.py
biomass/SpawnGibbs2020/: convert.py
biomass/XuSaatchi/: convert.py
permafrost/Brown2002/: convert.py
permafrost/Obu2018/: convert.py
regions/IPCCRegions/: prepare_ipcc_regions.py
regions/Koppen/: convert.py
regions/RECCAP2/: convert.py
scripts/: biblatex_builder.py  compare_datasets.py  helper_funcs.py  validate_dataset.py  visualize_netcdf.py
snd/CMC/: convert.py
